<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xhuabu.xhuabu_androiddemo.ui.user.activity.UserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FDC12A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/user"
            android:textColor="@color/tv_white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/user_kefu"
            android:textColor="@color/tv_white"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDC12A">

        <com.xhuabu.xhuabu_androiddemo.widget.CircleImageView
            android:id="@+id/iv_userHead"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_userNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_userHead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="期货小达人"
            android:textColor="@color/tv_white"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/rl_zc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_userNickName"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/user_cash"
                android:textColor="@color/tv_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_userasset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv"
                android:text=" - - "
                android:textColor="@color/tv_white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:text="元"
                android:textColor="@color/tv_white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_zc"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/user_stock"
                android:textColor="@color/tv_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_userstock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text=" - - "
                android:textColor="@color/tv_white"
                android:textSize="24dp"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" />

</LinearLayout>
